# ForgeWeave

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  ADAPTER_SPEC.md  AGENTS.md  AGENT_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MCP-SCHEMA.md  PROJECT_CONTEXT.md  README.md  RESEARCH_INSTRUCTIONS.md  SECURITY.md  SKILL_SPEC.md  SUPPORT.md  TEMPLATE_INSTRUCTIONS.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  config.yml  feature_proposal.md
.github/workflows/: ci.yml  publish.yml
forgeweave/: __init__.py  __main__.py  cli.py
forgeweave/Templates/opencode/: opencode.json
src/forgeweave/: __init__.py  __main__.py  cli.py  db.py  pipeline.py  registry.py  server.py
src/forgeweave/research_mcp/: browser.py  cache.py  crawler.py  documents.py  models.py  scraper.py  server.py  vectors.py
src/forgeweave/templates/claude/: AGENTS.md
src/forgeweave/templates/claude/.claude/: settings.json
src/forgeweave/templates/claude/.claude/agents/: research-synthesizer.md  research-validator.md
src/forgeweave/templates/claude/.claude/commands/: forge-commit.md  forge-docs.md  forge-review.md  forge-test.md
src/forgeweave/templates/claude/.claude/hooks/: notification.py  permission_request.py  post_agent_create.py  post_command.py  post_file_write.py  post_research.py  post_skill.py  post_tool_use.py  post_tool_use_failure.py  pre_agent_create.py  pre_command.py  pre_compact.py  pre_file_write.py  pre_research.py  pre_skill.py  pre_tool_use.py  research_complete.py  research_iteration.py  session_end.py  session_start.py  setup.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
src/forgeweave/templates/claude/.claude/hooks/validators/: forge_validator.py
src/forgeweave/templates/claude/.claude/skills/architecture-designer/: SKILL.md
src/forgeweave/templates/claude/.claude/skills/debugger/: SKILL.md
src/forgeweave/templates/claude/.claude/skills/refactor-engine/: SKILL.md
src/forgeweave/templates/claude/.claude/skills/skill-builder/: SKILL.md
src/forgeweave/templates/claude/.claude/skills/skill-generator/: SKILL.md
src/forgeweave/templates/claude/.claude/skills/test-generator/: SKILL.md
src/forgeweave/templates/claude/agents/: research-output-writer.md
src/forgeweave/templates/claude/commands/: forge-test.md
src/forgeweave/templates/claude/skills/planner/: SKILL.md
src/forgeweave/templates/claude/skills/web-research/: SKILL.md
src/forgeweave/templates/claude/skills/workflow-orchestrator/: SKILL.md
src/forgeweave/templates/gemini/.gemini/: settings.json
src/forgeweave/templates/gemini/.gemini/agents/: research-agent.md  research-planner.md
src/forgeweave/templates/gemini/.gemini/commands/: forge-commit.toml  forge-docs.toml  forge-research.toml  forge-review.toml  forge-start.toml  forge-test.toml
src/forgeweave/templates/gemini/.gemini/hooks/: post_file_write.py  post_skill.py  post_tool_use.py  pre_command.py  pre_file_write.py  pre_skill.py  session_end.py  session_start.py  tool_filter.py
src/forgeweave/templates/gemini/agents/: research-planner.md  research-validator.md
src/forgeweave/templates/gemini/commands/: forge-research.md  forge-research.toml  forge-start.toml
src/forgeweave/templates/gemini/skills/memory-manager/: SKILL.md
src/forgeweave/templates/gemini/skills/quick-research/: SKILL.md
src/forgeweave/templates/opencode/: opencode.json
src/forgeweave/templates/opencode/commands/: forge-commit.md  forge-start.md
src/forgeweave/templates/opencode/skills/tool-selector/: SKILL.md
src/forgeweave/templates/qwen/: qwen-extension.json
src/forgeweave/templates/qwen/.qwen/agents/: research-agent.yaml  research-output-writer.md  research-output-writer.yaml  research-planner.yaml
src/forgeweave/templates/qwen/.qwen/commands/: forge-research.md  forge-research.toml  forge-review.toml  forge-search.md  forge-start.md
src/forgeweave/templates/qwen/.qwen/hooks/: on_agent_end.ts  on_agent_start.ts  on_error.ts  on_prompt_submit.ts  on_tool_execute.ts  on_tool_result.ts
src/forgeweave/templates/qwen/.qwen/src/: forge_bridge.ts  forge_client.ts  index.ts
src/forgeweave/templates/qwen/agents/: research-agent.md  research-agent.yaml  research-synthesizer.md  research-synthesizer.yaml  research-validator.yaml
src/forgeweave/templates/qwen/commands/: forge-commit.toml  forge-docs.md  forge-docs.toml  forge-research.toml  forge-review.md  forge-start.toml  forge-test.toml
src/forgeweave/templates/qwen/hooks/: on_agent_end.ts  on_agent_start.ts  on_error.ts  on_prompt_submit.ts  on_tool_execute.ts  on_tool_result.ts
src/forgeweave/templates/qwen/skills/command-executor/: SKILL.md
src/forgeweave/templates/qwen/skills/contributor-onboarding/: SKILL.md
src/forgeweave/templates/qwen/skills/deep-research/: SKILL.md
src/forgeweave/templates/qwen/skills/skill-authoring/: SKILL.md
src/forgeweave/templates/qwen/skills/validation-engine/: SKILL.md
src/forgeweave/templates/qwen/src/: forge_bridge.ts  forge_client.ts
src/forgeweave/tests/: test_imports.py
tests/: test_imports.py
(+88 files in other folders)
