[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeweave"
version = "1.0.0"
description = "Framework-agnostic agent orchestration layer — 12 forge.* MCP tools"
readme = "README.md"
authors = [
    { name = "ForgeWeave Core", email = "team@forgeweave.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["mcp", "agent", "orchestration", "research", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=0.4,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "trafilatura>=1.6,<2.0",
    "aiohttp>=3.9,<4.0",
    "chromadb>=0.5,<1.0",
    "diskcache>=5.6,<6.0",
    "markitdown>=0.1,<1.0",
    "PyMuPDF>=1.23,<2.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Razaib-khan/forgeweave"
Documentation = "https://github.com/Razaib-khan/forgeweave"
Repository = "https://github.com/Razaib-khan/forgeweave"

[project.scripts]
forge = "forgeweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forgeweave*"]

[tool.setuptools.package-data]
"forgeweave" = ["templates/**/*"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
