[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeweave"
version = "2.0.0"
description = "Agent orchestration framework — project scaffolding, template distribution, AGENTS.md rules"
readme = "README.md"
authors = [
    { name = "ForgeWeave Core", email = "team@forgeweave.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["agent", "orchestration", "scaffolding", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "inquirerpy>=0.3",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Razaib-khan/forgeweave"
Documentation = "https://github.com/Razaib-khan/forgeweave"
Repository = "https://github.com/Razaib-khan/forgeweave"

[project.scripts]
forge = "forgeweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forgeweave*"]

[tool.setuptools.package-data]
"forgeweave" = [
    "templates/**/*",
    "templates/*/.*/**/*",
    "templates/*/.*/*",
]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
exclude = [
    "src/forgeweave/templates/",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
